fix: fixed list items spacing

--- a/src/sections/experience/experience.module.scss
+++ b/src/sections/experience/experience.module.scss
@@ -66,6 +66,10 @@
 
     &__points {
         margin-top: 2rem;
+
+        & > div:not(:last-child) {
+            margin-bottom: .8rem;
+        }
     }
 
     &__point {
