--- a/src/sections/technical-expertise/skills.module.scss
+++ b/src/sections/technical-expertise/skills.module.scss
@@ -16,6 +16,10 @@
 }
 
 .skills_desc {
+    & > div:not(:last-child) {
+        margin-bottom: .8rem;
+    }
+
     &__item {
         &__title {
             font-size: inherit;
